enhance performance and SEO

--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/main-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather App</title>
+    <!-- Title & Basic Description -->
+    <title>Weather App | Real-Time Forecast & Hourly Updates</title>
+    <meta
+      name="description"
+      content="Check real-time weather conditions, hourly forecasts, and weekly trends with our accurate and responsive Weather App. Stay prepared for every moment."
+    />
+    <meta
+      name="keywords"
+      content="weather, forecast, hourly weather, real-time weather, temperature, climate, rain, weather app, daily forecast, local weather"
+    />
+    <meta name="author" content="Abdelrahman Ahmed" />
+    <!-- Open Graph for Social Media -->
+    <meta property="og:title" content="Weather App | Real-Time Forecast" />
+    <meta
+      property="og:description"
+      content="Stay updated with accurate hourly and daily weather forecasts anywhere in the world."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-weather-app-url.com" />
+    <meta property="og:image" content="/src/assets/main-icon.png" />
   </head>
   <body>
     <div id="root"></div>
